<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Account Manager</string>
    <string name="action_settings">Settings</string>
    <string name="account_manager">Account Manager</string>
    <string name="add_new_accoint">Add New Account</string>
    <string name="update_accoint">Update Account</string>
    <string name="name">Title</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="manage_account">Manage Acconts</string>
    <string name="update">Updata</string>
    <string name="delete">Delete</string>
    <string name="hint">Please input datas</string>

    <string name="lockscreen_access_pattern_start">Start draw pattern</string>
    <string name="lockscreen_access_pattern_cleared">Pattern is cleaned</string>
    <string name="lockscreen_access_pattern_cell_added">Added cell</string>
    <string name="lockscreen_access_pattern_detected">Pattern is finished</string>
    <string name="lockpattern_retry_button_text">Retray</string>
    <string name="lockpattern_continue_button_text">Next</string>
    <string name="lockpattern_confirm_button_text">Confirm</string>
    <string name="lockpattern_cancel_button_text">Cancel</string>
    <string name="lockpattern_ok_button_text">Start draw your pattern</string>
    <string name="lockpattern_recording_intro_header">Draw your pattern</string>
    <string name="lockpattern_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lockpattern_recording_incorrect_too_short">At least 4 dots required.Try again.</string>
    <string name="lockpattern_pattern_entered_header">Pattern recorded</string>
    <string name="lockpattern_need_to_confirm">Draw pattern again to confirm</string>
    <string name="lockpattern_need_to_unlock_wrong">"Pattern isn't match.Try again"</string>
    <string name="lockpattern_pattern_confirmed_header">Confirm to save pattern.</string>
    <string name="lockpattern_recording_inprogress">Release finger when done.</string>
    <string name="gesture_password_guide_text">You can create an unlock pattern to protect your accounts.</string>
    <string name="gesture_password_guide_creat_btn">Create an unlock pattern</string>
    <string name="set_password_success">Set success.</string>
    <string name="draw_pattern_to_unlock">Draw pattern to unlock</string>
    <string name="forget_password">Forget password</string>
    <string name="unlock_success">Unlock Success</string>
    <string name="over_five_times">"You have lost the wrong password 5 times. Please try again in 30 seconds."</string>
    <string name="password_error_a">"Pattern not match "</string>
    <string name="password_error_b">" attempt(s) left"</string>
    <string name="retry_a">"Retry after "</string>
    <string name="retry_b">" seconds"</string>
    <string name="exit_app">Press the back key again to exit</string>
    <string name="delete_alert">One account will be deleted</string>
    
     <style name="DefaultButtonText">
	   <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#979797</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textStyle">normal</item>
	    <item name="android:textSize">20sp</item>
	    <item name="android:shadowColor">#f9f9f9</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">1</item>
	</style>
	
    <style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textStyle">normal</item>
	    <item name="android:textSize">20sp</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
	
    
	
</resources>
