<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/layers_fb_button_bg"
    >
    
    <TextView 
        android:id="@+id/newAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="20sp"
        style="@style/ButtonText"
        android:text="@string/add_new_accoint"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_below="@id/newAccount"
        android:layout_height="1dp"
		android:textColor="#004570"
		android:background="#00FF00"/>
    

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        >
        
        
    	<EditText 
    	    android:id="@+id/etName"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	      	android:background="@drawable/edittext_top_bg"
	        android:padding="10dp"
	        android:hint="@string/name"
	        android:textColorHint="#bbbbbb"
	        android:drawableLeft="@drawable/email"/>
    	<EditText 
    	    android:id="@+id/etAccount"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:background="@drawable/edittext_default_bg"
	       	android:layout_marginTop="-2dp"
	        android:padding="10dp"
	        android:hint="@string/account"
	        android:textColorHint="#bbbbbb"
	        android:drawableLeft="@drawable/user"/>
    	<EditText 
    	    android:id="@+id/etPassword"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:background="@drawable/edittext_bottom_bg"
	       	android:layout_marginTop="-2dp"
	        android:padding="10dp"
	        android:hint="@string/password"
	        android:textColorHint="#bbbbbb"
	        android:drawableLeft="@drawable/password"/>
    <LinearLayout 
    	    android:orientation="horizontal"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:background="@drawable/linearlayout_bg">
        <Button 
	       	android:id="@+id/btOk"
	       	android:layout_width="0dp"
	       	android:layout_weight="1"
	       	android:layout_height="wrap_content"
	       	android:text="@string/ok"
	        style="@style/ButtonText"
	       	android:background="@drawable/layers_fb_button_bg"/>
        <Button 
	       	android:id="@+id/btCancel"
	       	android:layout_width="0dp"
	       	android:layout_weight="1"
	       	android:layout_height="wrap_content"	   
	       	android:text="@string/cancel"
	        style="@style/ButtonText"
	       	android:background="@drawable/layers_fb_button_bg"/>
     </LinearLayout>
        
  </LinearLayout>

</RelativeLayout>
